fix: custom controls taking too much space

--- a/packages/histoire-app/src/app/style/sandbox.css
+++ b/packages/histoire-app/src/app/style/sandbox.css
@@ -18,7 +18,7 @@ html {
   display: none;
 }
 
-.__histoire-render-story {
+.__histoire-render-story:not(.__histoire-render-custom-controls) {
   overflow: auto;
   min-height: 100%;
 }
